--- a/infex.html
+++ b/infex.html
@@ -43,7 +43,32 @@
             <li><a href="">sandwich</a></li>
             <li><a href="">LOREMISPSUM</a></li>
         </ul>
-        <a href="">CREATE YOUR LEGEND</a>
+        <div class="box">
+            <div class="box-item">
+                <p class="number number-one">1</p>
+                <div class="box-text">
+                    <h3>CREATE IT</h3>
+                    <p>Choose from a selection of tastilicious toppings to create your own pizza</p>
+                </div>
+            </div>
+            <div class="box-item">
+                <p class="number number-two">2</p>
+                <div class="box-text">
+                    <h3>NAME IT</h3>
+                    <p>Choose from a selection of tastilicious toppings to create your own pizza</p>
+                </div>
+            </div>
+            <div class="box-item">
+                <p class="number number-three">3</p>
+                <div class="box-text">
+                    <h3>FAME IT</h3>
+                    <p>Choose from a selection of tastilicious toppings to create your own pizza</p>
+                </div>
+            </div>
+        </div>
+        <p class="center">
+            <a href="" class="btn-start">CREATE YOUR LEGEND</a>   
+        </p>
     </div>
     <div class="footer">
         <div class="wrapper">
