--- a/infex.html
+++ b/infex.html
@@ -37,53 +37,54 @@
 				<img class="pizza" src="image/pizza.png" alt="Pizza" />
 			</div>
 		</div>
-		<div class="page"></div>
-		<div class="wrapper">
-			<div class="center">
-				<h2 class="h2">How to progress?</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+		<div class="page">
+			<div class="wrapper">
+				<div class="center">
+					<h2 class="h2">How to progress?</h2>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+				</div>
+				<ul class="menu">
+					<li><a class="active" href="">pizza cartoon</a></li>
+					<li><a href="">Burger</a></li>
+					<li><a href="">sandwich</a></li>
+					<li><a href="">LOREMISPSUM</a></li>
+				</ul>
+				<div class="box">
+					<div class="box-item">
+						<p class="number number-one">1</p>
+						<div class="box-text">
+							<h3>CREATE IT</h3>
+							<p>
+								Choose from a selection of tastilicious toppings to create your own
+								pizza
+							</p>
+						</div>
+					</div>
+					<div class="box-item">
+						<p class="number number-two">2</p>
+						<div class="box-text">
+							<h3>NAME IT</h3>
+							<p>
+								Choose from a selection of tastilicious toppings to create your own
+								pizza
+							</p>
+						</div>
+					</div>
+					<div class="box-item">
+						<p class="number number-three">3</p>
+						<div class="box-text">
+							<h3>FAME IT</h3>
+							<p>
+								Choose from a selection of tastilicious toppings to create your own
+								pizza
+							</p>
+						</div>
+					</div>
+				</div>
+				<p class="center">
+					<a href="" class="btn-start">CREATE YOUR LEGEND</a>
+				</p>
 			</div>
-			<ul class="menu">
-				<li><a class="active" href="">pizza cartoon</a></li>
-				<li><a href="">Burger</a></li>
-				<li><a href="">sandwich</a></li>
-				<li><a href="">LOREMISPSUM</a></li>
-			</ul>
-			<div class="box">
-				<div class="box-item">
-					<p class="number number-one">1</p>
-					<div class="box-text">
-						<h3>CREATE IT</h3>
-						<p>
-							Choose from a selection of tastilicious toppings to create your own
-							pizza
-						</p>
-					</div>
-				</div>
-				<div class="box-item">
-					<p class="number number-two">2</p>
-					<div class="box-text">
-						<h3>NAME IT</h3>
-						<p>
-							Choose from a selection of tastilicious toppings to create your own
-							pizza
-						</p>
-					</div>
-				</div>
-				<div class="box-item">
-					<p class="number number-three">3</p>
-					<div class="box-text">
-						<h3>FAME IT</h3>
-						<p>
-							Choose from a selection of tastilicious toppings to create your own
-							pizza
-						</p>
-					</div>
-				</div>
-			</div>
-			<p class="center">
-				<a href="" class="btn-start">CREATE YOUR LEGEND</a>
-			</p>
 		</div>
 		<div class="footer">
 			<div class="wrapper">
